--- a/css/styles.css
+++ b/css/styles.css
@@ -279,6 +279,7 @@
 /* custom-section */
 .custom_section {
     padding: 120px 0;
+    text-align: center;
 }
 .visually-hidden{
     position: absolute;
@@ -367,6 +368,7 @@
     letter-spacing: 0.02em;
     color:  #2e2f42; 
     margin-bottom: 8px;
+    font-weight: bold;
 }
 
 
@@ -767,7 +769,7 @@ text-decoration-skip-ink: none;
 }
 
 .container-footer {
-    display: flex;
+  display: flex;
     align-items: baseline;
     
 }
@@ -863,8 +865,22 @@ text-decoration-skip-ink: none;
   }
 
   .form-container {
+    max-width: 320px;
+    margin: 0 auto;
+  }
+
+@media screen and (min-width: 768px) {
+  .form-container {
+    max-width: 768px;
     margin-left: 80px;
   }
+}
+@media screen and (min-width: 1158px) {
+  .form-container {
+    max-width: 1158px;
+    margin-left: 80px;
+  }
+}
 
   .form-title {
     margin-bottom: 16px;
@@ -877,10 +893,22 @@ text-decoration-skip-ink: none;
   }
 
   .subscribe-form{
-    display: flex; 
+    margin: 0 auto;
     gap: 24px;
   }
 
+  @media screen and (min-width: 768px) {
+    .subscribe-form{
+      display: flex; 
+      max-width: 768px;
+    }
+  }
+  @media screen and (min-width: 1158px) {
+    .subscribe-form{
+      display: flex; 
+      max-width: 1158px;
+    }
+  }
  
   
   .form-input {
@@ -904,22 +932,22 @@ text-decoration-skip-ink: none;
 }
 
 .form-button {
-    min-width: 165px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #ffffff;
-    cursor: pointer;
-    background-color: #4D5AE5;
-    border: none;
-    border-radius: 4px;
-    margin-left: 24px;
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4D5AE5;
+  border: none;
+  border-radius: 4px;
+  margin-left: 24px;
 }
 
 .form-button-icon {
