--- a/css/styles.css
+++ b/css/styles.css
@@ -256,6 +256,17 @@ gap: 0px;
 border-radius: 4px 0px 0px 0px;
 opacity: 0px;
 }
+.visually-hidden.mobile-menu-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  top: 32px;
+left: 256px;
+gap: 0px;
+border-radius: 4px 0px 0px 0px;
+opacity: 0px;
+  
+}
 
   .mobile-menu-items {
     font-family: Roboto;
@@ -361,6 +372,8 @@ color: #2e2f42;
 @media screen and (min-width: 768px) {
   .privileges_list {
     max-width: 768px;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 @media screen and (min-width: 1158px) {
@@ -371,7 +384,8 @@ color: #2e2f42;
 }
 
 .privilege-item {
-  
+  gap: 8px;
+  max-width: 320px;
 }
 @media screen and (min-width: 768px) {
   .privilege_item  {
@@ -433,6 +447,21 @@ color: #2e2f42;
 
 
 .privilege_header {
+font-family: Roboto;
+font-size: 36px;
+font-weight: 700;
+line-height: 40px;
+letter-spacing: 0.02em;
+text-align: center;
+text-underline-position: from-font;
+text-decoration-skip-ink: none;
+max-width: 320px;
+margin-bottom: 8px;
+margin-top: 72px;
+}
+
+@media screen and (min-width: 768px) {
+  .privilege_header {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
@@ -440,8 +469,19 @@ color: #2e2f42;
     color:  #2e2f42; 
     margin-bottom: 8px;
     font-weight: bold;
+  }
 }
-
+@media screen and (min-width: 1158px) {
+  .privilege_header {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color:  #2e2f42; 
+    margin-bottom: 8px;
+    font-weight: bold;
+  }
+}
 
 .privilege_description{
 max-width: 320px;
@@ -525,11 +565,7 @@ text-decoration-skip-ink: none;
     height: 100%;
   }
   
-  .mobile-menu-close {
-    position: absolute;
-    top: 24px;
-    right: 24px;
-  }
+  
   
   .mobile-menu-nav {
     margin-bottom: auto;
@@ -573,7 +609,6 @@ text-decoration-skip-ink: none;
 .team-list {
     gap: 8px;
     max-width: 320px;
-    
     padding-left: 28px;
     padding-right: 28px;
     padding-top: 72px;
@@ -582,18 +617,15 @@ text-decoration-skip-ink: none;
 }
 @media screen and (min-width: 768px) {
     .team-list {
-      width: Hug (264px)px;
-height: Hug (428px)px;
-top: 1220px;
-left: 108px;
 padding: 0px 0px 32px 0px;
-gap: 32px;
 border-radius: 0px 0px 4px 4px;
 opacity: 0px;
 display: flex;
-flex-direction: calc((100% - 32px / 2));
+flex-wrap: wrap;
+max-width: 768px;
 }
 }
+
 @media screen and (min-width: 1158px) {
     .team-list {
         display: flex;
@@ -751,12 +783,14 @@ flex-direction: calc((100% - 32px / 2));
     padding-bottom: 32px;
     display: flex;
     flex-wrap: wrap;
+    max-width: 768px;
+    justify-content: center;
   }
 }
 @media screen and (min-width: 1158px) {
   .portfolio-list  {
     max-width: 1158px;
-    
+    gap: 24px;
   }
 }
 
@@ -990,7 +1024,7 @@ flex-direction: calc((100% - 32px / 2));
 @media screen and (min-width: 768px) {
   .form-container {
     max-width: 768px;
-    margin-left: 80px;
+    margin-right: 100%;
   }
 }
 @media screen and (min-width: 1158px) {
@@ -1102,10 +1136,11 @@ flex-direction: calc((100% - 32px / 2));
   margin: auto;
   margin-bottom: 10px;
 }
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 768px) {
   .form-button {
     margin-left: 24px;
     max-width: 1158px;
+
   }
 }
 @media screen and (min-width: 1158px) {
@@ -1371,13 +1406,15 @@ flex-direction: calc((100% - 32px / 2));
   .footer .container {
     display: flex;
     align-items: baseline;
-    
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 768px;
 }
 }
 @media screen and (min-width: 1158px) {
   .footer .container {
     display: flex;
     align-items: baseline;
-    
+    flex-wrap: nowrap;
 }
 }
