add murkup portfolio

--- a/css/styles-new.css
+++ b/css/styles-new.css
@@ -684,7 +684,10 @@
   
   @media screen and (min-width: 768px) {
     .portfolio-list {
+        display: flex;
       gap: 72px 24px;
+      flex-wrap: wrap;
+        flex-direction: row;
     }
   }
   
